<resources>
    <string name="app_name">ticketeen</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Номер телефона (+79001234567)</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Регистрация</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_phone">Телефон некорректен</string>
    <string name="error_invalid_password">Пароль некорректен</string>
    <string name="error_field_required">Это поле обязательное для заполнения</string>
</resources>
